@@ -7,6 +7,7 @@ vertex-theme (20180519-0utopia1) UNRELEASED; urgency=medium
     - Standards-Version => 4.3.0; drop obsolete get-orig-source rule from
       debian/rules
     - Update copyright years & email
+  * Build with --with-gnome 3.22, as that is the latest version supported.
 
  -- James Lu <james@overdrivenetworks.com>  Tue, 09 Apr 2019 00:18:08 -0700
 
